re PR c++/33459 (ICE on reference member in union)

cp/
2007-09-20  Paolo Carlini  <pcarlini@suse.de>

	PR c++/33459
	* init.c (build_zero_init): If, recursively, build_zero_init
	returns a NULL_TREE, do not append it to the VEC of constructors.

testsuite/
2007-09-20  Paolo Carlini  <pcarlini@suse.de>

	PR c++/33459
	* g++.dg/init/ref14.C: New.

From-SVN: r128616